Add --add-opens java.base/sun.nio.ch=ALL-UNNAMED (#2299)
- Add sun.nio.ch to surefire JVM arguments
- Add sun.nio.ch to bin/karaf and bin/karaf.bat
- Add sun.nio.ch to InstanceServiceImpl
- Add sun.nio.ch to unix and windows wrapper configurations
- Add sun.nio.ch to Pax Exam test support classes