@@ -477,6 +477,7 @@
                                 --add-opens java.base/java.net=ALL-UNNAMED
                                 --add-opens java.base/java.lang=ALL-UNNAMED
                                 --add-opens java.base/java.util=ALL-UNNAMED
+                                --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-opens java.naming/javax.naming.spi=ALL-UNNAMED
                                 --add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
                             </argLine>
